@startuml project
class User {
  +int userId
  +String name
  +login()
}

class SystemService {
  +getProductFromStore()
}

User --> SystemService
class Product {
  +int productId
  +String productName
  +double price
}

class Store {
  +String storeName
  +addProduct(Product)
  +removeProduct(Product)
}

SystemService --> Store
Store --> Product



@enduml